syntax = "proto3";
package identities.transactions.mutate;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_id = 2;
  string identity_id = 3;
  string mutable_meta_properties = 4;
  string mutable_properties = 5;
}